--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,52 @@
-python-3.9.7
+brotlipy               0.7.0
+certifi                2021.5.30
+cffi                   1.14.6
+chardet                4.0.0
+click                  8.0.1
+colorama               0.4.4
+cryptography           3.4.7
+dill                   0.3.4
+dnspython              2.1.0
+Flask                  1.1.2
+Flask-MySQLdb          0.2.0
+GPUtil                 1.4.0
+idna                   2.10
+imageio-ffmpeg-0.4.3
+importlib-metadata-3.10.0
+itsdangerous-2.0.1
+Jinja2-3.0.1
+joblib-1.0.1
+llvmlite-0.36.0
+MarkupSafe-2.0.1
+mkl-fft-1.3.0
+mkl-random-1.2.2
+mkl-service-2.4.0
+mysql-0.0.3
+mysql-connector-python-8.0.25
+mysqlclient-2.0.3
+ninja-1.10.2
+numba-0.53.1
+numpy-1.20.3
+nvidia-pyindex-1.0.9
+olefile-0.46
+Pillow-8.3.1
+pip-21.2.3
+protobuf-3.16.0
+pycparser-2.20
+pyOpenSSL-20.0.1
+PySocks-1.7.1
+requests-2.25.1
+scipy-1.6.2
+setuptools-52.0.0.post20210125
+six-1.16.0
+torch-1.7.1
+torchaudio-0.7.2
+torchvision-0.8.2
+tqdm-4.62.0
+typing-extensions-3.10.0.0
+urllib3-1.26.6
+Werkzeug-1.0.1
+wheel-0.37.0
+win-inet-pton-1.1.0
+wincertstore-0.2
+zipp-3.5.0
